# crafting

./: Cargo.toml  readme.md
.github/workflows/: pullrequest.yml
C4Sharp/: C4Sharp.sln
C4Sharp/C4Tests/: C4Tests.csproj  CompilerTests.cs  TokenTests.cs
C4Sharp/C4Tests/Programs/: HelloWorld.c  return_2.c
C4Sharp/ConsoleApp/: Compiler.cs  Program.cs  Token.cs
LoxInterpreter/: .gitignore  LoxInterpreter.sln
LoxInterpreter/Lox/: .editorconfig  AstPrinter.cs  Expr.cs  Program.cs  Scanner.cs  StringExtensions.cs  Token.cs  TokenType.cs
LoxInterpreter/Lox/Properties/: launchSettings.json
LoxInterpreter/Lox/Tool/: GenerateAst.cs
LoxInterpreter/LoxTests/: AstPrinterTests.cs  ExtensionMethodUnitTests.cs  LexerTests.cs  LexerUnitTests.cs  LoxSourceCodeFile.cs  LoxTests.csproj
benbp/: README.md
benbp/rust/interpreter/: Cargo.toml
benbp/src/: ast.rs  iter_extensions.rs  main.rs  scan.rs  token.rs
lox_interpreter/: readme.md
lox_interpreter/data/: conditional-and-false.lox  conditional-and-true.lox  helloworld.lox
lox_interpreter/src/: environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  runhelpers.rs  scanner.rs  tokens.rs  value.rs
lox_interpreter/src/core/: errors.rs  location.rs  mod.rs
monad_lang/: Cargo.toml
monad_lang/src/: lib.rs  main.rs  monad.rs  parser.rs
notes/: chapter-01.md  chapter-02.md
prework/: linkedlist.c  linkedlist_tests.c  linkedlist_wrapper.py  z_build.ps1  z_clean.ps1
rakitaj/LoxInterpreter/Notes/: Scanning.md
rakitaj/lox_interpreter/: Cargo.toml
rakitaj/prework/: .gitignore  linkedlist.c  z_rebuild.ps1
(+29 files in other folders)
