[package]
name = "lox_interpreter"
version = "0.1.0"
authors = ["Joshua Rakita <joshuarakita@gmail.com>", "Ben Broderick Phillips <ben@benbp.net"]
edition = "2021"
default-run = "rlox"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lox_interpreter"
path = "lox_interpreter/src/lib.rs"

[[bin]]
name = "rlox"
path = "lox_interpreter/src/main.rs"

[[bin]]
name = "blox"
path = "benbp/src/main.rs"

[dependencies]

[dev-dependencies]
rstest = "0.13.0"
